--- a/common/statistics/Cargo.toml
+++ b/common/statistics/Cargo.toml
@@ -17,7 +17,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
 thiserror = { workspace = true }
-time = { workspace = true }
+time = { workspace = true, features = ["serde"] }
 tokio = { workspace = true }
 si-scale = { workspace = true }
 strum = { workspace = true }
