Add outer AEAD encryption + Ack message type for LP protocol
- Add OuterAeadKey derived from PSK via Blake3 KDF for packet encryption
- Add LpMessage::Ack (0x0008) for ClientHello acknowledgment
- Gateway sends Ack after processing ClientHello (packet-per-connection)
- Update codec with AEAD encrypt/decrypt using ChaCha20-Poly1305
- Header remains cleartext (AAD), payload encrypted after PSK derivation
- Add parse_lp_header_only() for routing before session lookup
- Update session to expose outer_aead_key() getter
- Various LP protocol improvements and test coverage

Closes: nym-f4v1, nym-n9dr

--- a/common/nym-lp/Cargo.toml
+++ b/common/nym-lp/Cargo.toml
@@ -34,6 +34,7 @@ libcrux-kem = { git = "https://github.com/cryspen/libcrux" }
 libcrux-traits = { git = "https://github.com/cryspen/libcrux" }
 tls_codec = { workspace = true }
 num_enum = { workspace = true }
+chacha20poly1305 = { workspace = true }
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
