--- a/common/client-core/Cargo.toml
+++ b/common/client-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nym-client-core"
-version = "1.1.15"
+version.workspace = true
 authors = ["Dave Hrycyszyn <futurechimp@users.noreply.github.com>"]
 edition = "2021"
 rust-version = "1.85"
