--- a/common/client-core/surb-storage/Cargo.toml
+++ b/common/client-core/surb-storage/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nym-client-core-surb-storage"
-version = "0.1.0"
+version.workspace = true
 edition = "2021"
 license.workspace = true
 
@@ -26,8 +26,8 @@ workspace = true
 features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "time"]
 optional = true
 
-[target."cfg(not(target_arch = \"wasm32\"))".dependencies.sqlx-pool-guard]
-path = "../../../sqlx-pool-guard"
+[target."cfg(not(target_arch = \"wasm32\"))".dependencies.nym-sqlx-pool-guard]
+path = "../../../nym-sqlx-pool-guard"
 
 [build-dependencies]
 anyhow = { workspace = true }
