--- a/common/credentials/Cargo.toml
+++ b/common/credentials/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nym-credentials"
-version = "0.1.0"
+version.workspace = true
 edition = "2021"
 license.workspace = true
 
@@ -30,4 +30,3 @@ nym-serde-helpers = { path = "../serde-helpers", features = ["date"] }
 
 [dev-dependencies]
 rand = { workspace = true }
-
