--- a/common/crypto/Cargo.toml
+++ b/common/crypto/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nym-crypto"
-version = "0.4.0"
+version.workspace = true
 description = "Crypto library for the nym mixnet"
 edition = { workspace = true }
 authors = { workspace = true }
@@ -33,8 +33,8 @@ thiserror = { workspace = true }
 zeroize = { workspace = true, optional = true, features = ["zeroize_derive"] }
 
 # internal
-nym-sphinx-types = { path = "../nymsphinx/types", version = "0.2.0", default-features = false }
-nym-pemstore = { path = "../../common/pemstore", version = "0.3.0" }
+nym-sphinx-types = { path = "../nymsphinx/types", default-features = false }
+nym-pemstore = { path = "../../common/pemstore" }
 
 [dev-dependencies]
 anyhow = { workspace = true }
