--- a/common/nymsphinx/Cargo.toml
+++ b/common/nymsphinx/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nym-sphinx"
-version = "0.1.0"
+version.workspace = true
 description = "Top-level crate for sphinx packets as used by the Nym mixnet"
 edition = { workspace = true }
 authors = { workspace = true }
@@ -26,13 +26,13 @@ nym-sphinx-types = { path = "types" }
 
 # those dependencies are due to intriducing preparer and receiver. Perpaphs that indicates they should be moved
 # to separate crate?
-nym-crypto = { path = "../crypto", version = "0.4.0" }
+nym-crypto = { path = "../crypto" }
 nym-topology = { path = "../topology" }
 nym-metrics = { path = "../nym-metrics" }
 
 [dev-dependencies]
 nym-mixnet-contract-common = { path = "../cosmwasm-smart-contracts/mixnet-contract" }
-nym-crypto = { path = "../crypto", version = "0.4.0", features = [
+nym-crypto = { path = "../crypto",  features = [
     "asymmetric",
 ] }
 
