--- a/contracts/ecash/Cargo.toml
+++ b/contracts/ecash/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nym-ecash"
-version = "0.1.0"
+version.workspace = true
 edition = { workspace = true }
 authors = { workspace = true }
 license = { workspace = true }
