--- a/nym-sqlx-pool-guard/Cargo.toml
+++ b/nym-sqlx-pool-guard/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "sqlx-pool-guard"
-version = "0.1.0"
+name = "nym-sqlx-pool-guard"
+version.workspace = true
 edition = "2024"
 license.workspace = true
 
