--- a/Cargo.toml
+++ b/Cargo.toml
@@ -148,7 +148,7 @@ members = [
     "service-providers/common",
     "service-providers/ip-packet-router",
     "service-providers/network-requester",
-    "sqlx-pool-guard",
+    "nym-sqlx-pool-guard",
     "tools/echo-server",
     "tools/internal/contract-state-importer/importer-cli",
     "tools/internal/contract-state-importer/importer-contract",
@@ -199,6 +199,7 @@ edition = "2024"
 license = "Apache-2.0"
 rust-version = "1.85"
 readme = "README.md"
+version = "1.20.0" # this version is used for the Rust SDK and its workspace dependencies, it is not applied globally
 
 [workspace.dependencies]
 addr = "0.15.6"
