--- a/ansible/nym-node/playbooks/ansible.cfg
+++ b/ansible/nym-node/playbooks/ansible.cfg
@@ -10,7 +10,7 @@
 [defaults]
 # some basic default values...
 
-inventory       = inventory/
+inventory       = ./inventory/
 #library        = /usr/share/my_modules/
 remote_tmp     = $HOME/.ansible/tmp
 pattern        = *
@@ -29,13 +29,14 @@ module_lang    = C
 gathering = implicit
 
 # additional paths to search for roles in, colon separated
-roles_path    = ./roles
+roles_path    = ../roles
 
 # uncomment this to disable SSH key host checking
 host_key_checking = False
 
 # what flags to pass to sudo
 #sudo_flags = -H
+[WARNING]: provided hosts list is empty, only localhost is available. Note that the implicit localhost does not match 'all'
 
 # SSH timeout
 timeout = 100
@@ -65,7 +66,7 @@ timeout = 100
 #jinja2_extensions = jinja2.ext.do,jinja2.ext.i18n
 
 # if set, always use this private key file for authentication, same as 
-# if passing --private-key to ansible or ansible-playbook
+# if passing --private -key to ansible or ansible-playbook
 #private_key_file = /path/to/file
 
 # format of string {{ ansible_managed }} available within Jinja2 
