--- a/ansible/nym-node/playbooks/group_vars/all.yml
+++ b/ansible/nym-node/playbooks/group_vars/all.yml
@@ -1,7 +1,7 @@
-main_domain: "changehere.example.com"
+main_domain: "<DOMAIN>"
 
 ansible_user: root
-ansible_ssh_private_key_file: ~/.ssh/operator_key
+ansible_ssh_private_key_file: ~/.ssh/<SSH_KEY>
 
 packages:
   - tmux
@@ -11,3 +11,10 @@ packages:
   - git
   - zip
   - nala
+  - curl
+  - neovim
+  - ca-certificates
+  - jq
+  - curl
+  - wget
+  - ufw
