--- a/ansible/nym-node/playbooks/group_vars/all.yml
+++ b/ansible/nym-node/playbooks/group_vars/all.yml
@@ -7,6 +7,9 @@
 # uncomment the line above and set the tag
 
 cli_url: "https://github.com/nymtech/nym/releases/download/nym-binaries-{{ nym_version }}/nym-cli"
+tunnel_manager_url: "https://github.com/nymtech/nym/raw/refs/heads/develop/scripts/nym-node-setup/network-tunnel-manager.sh"
+quic_bridge_deployment_url: "https://github.com/nymtech/nym/blob/develop/scripts/nym-node-setup/quic_bridge_deployment.sh"
+
 operator_name: "<OPERATOR_NAME>"
 
 main_domain: "<DOMAIN>"
