--- a/ansible/nym-node/playbooks/group_vars/all.yml
+++ b/ansible/nym-node/playbooks/group_vars/all.yml
@@ -14,6 +14,10 @@ operator_name: "<OPERATOR_NAME>"
 
 main_domain: "<DOMAIN>"
 
+email: "<EMAIL>"
+
+website: <WEBSITE>
+
 ansible_user: root
 ansible_ssh_private_key_file: ~/.ssh/<SSH_KEY>
 
