add tunnel and quic roles

--- a/ansible/nym-node/playbooks/deploy.yml
+++ b/ansible/nym-node/playbooks/deploy.yml
@@ -4,3 +4,7 @@
   become: true
   roles:
     - base
+    - nym
+    - nginx
+    - tunnel # comment for mixnode
+    - quic # comment for mixnode or non-wireguard gateway
