--- a/ansible/nym-node/roles/tunnel/tasks/main.yml
+++ b/ansible/nym-node/roles/tunnel/tasks/main.yml
@@ -1,11 +1,13 @@
 ---
 - name: Download network-tunnel-manager.sh
+  tags: network tunnel manager
   get_url:
     url: "{{ tunnel_manager_url }}"
     dest: "/root/nym-binaries/network-tunnel-manager.sh"
     mode: "0755"
 
 - name: Configure tunnel manager
+  tags: network tunnel manager
   become: true
   command:
     cmd: "/root/nym-binaries/network-tunnel-manager.sh {{ item }}"
