--- a/ansible/nym-node/playbooks/group_vars/all.yml
+++ b/ansible/nym-node/playbooks/group_vars/all.yml
@@ -18,6 +18,8 @@ email: "<EMAIL>"
 
 website: <WEBSITE>
 
+description: "<NODE_PUBLIC_DESCRIPTION>"
+
 ansible_user: root
 ansible_ssh_private_key_file: ~/.ssh/<SSH_KEY>
 
