--- a/ansible/nym-node/roles/postinstall/tasks/main.yml
+++ b/ansible/nym-node/roles/postinstall/tasks/main.yml
@@ -1,3 +1,4 @@
+---
 - name: Get bonding details
   tags: postinstall
   command: "/root/nym-binaries/nym-node bonding-information"
@@ -7,4 +8,36 @@
 - name: Display bonding info 🎉
   tags: postinstall
   debug:
-    msg: "{{ bondinfo.stdout_lines }}"
+    msg:
+      - "Nym bonding information:"
+      - "{{ bondinfo.stdout_lines }}"
+
+- name: Prompt operator to generate contract message in wallet
+  tags: bonding
+  pause:
+    prompt: |
+      Using the bonding information above, go to your wallet and create
+      the bonding transaction.
+
+      When the wallet shows you the CONTRACT MESSAGE that must be signed
+      by this node, paste it here and press Enter.
+  register: contract_msg_input
+
+- name: Sign bonding contract message on the node
+  tags: bonding
+  command:
+    argv:
+      - /root/nym-binaries/nym-node
+      - sign
+      - --contract-msg
+      - "{{ contract_msg_input.user_input }}"
+      - --output
+      - json
+  register: sign_output
+
+- name: Display signed bonding payload (paste this back into your wallet)
+  tags: pbonding
+  debug:
+    msg:
+      - "Paste the last line of the following signed message into your wallet to complete bonding:"
+      - "{{ sign_output.stdout }}"
