--- a/Cargo.toml
+++ b/Cargo.toml
@@ -390,6 +390,73 @@ zeroize = "1.7.0"
 
 prometheus = { version = "0.14.0" }
 
+# sdk related deps so we can pull in workspace versions of these in other crates' cargo files, and not have to define the version everywhere
+nym-api = { version = "1.2.0", path = "nym-api" }
+nym-bandwidth-controller = { version = "1.2.0", path = "common/bandwidth-controller" }
+nym-bin-common = { version = "1.2.0", path = "common/bin-common" }
+nym-client-core = { version = "1.2.0", path = "common/client-core" }
+nym-client-core-config-types = { version = "1.2.0", path = "common/client-core/config-types" }
+nym-client-core-gateways-storage = { version = "1.2.0", path = "common/client-core/gateways-storage" }
+nym-client-core-surb-storage = { version = "1.2.0", path = "common/client-core/surb-storage" }
+nym-compact-ecash = { version = "1.2.0", path = "common/nym_offline_compact_ecash" }
+nym-config = { version = "1.2.0", path = "common/config" }
+nym-contracts-common = { version = "1.2.0", path = "common/cosmwasm-smart-contracts/contracts-common" }
+nym-coconut-dkg-common = { version = "1.2.0", path = "common/cosmwasm-smart-contracts/coconut-dkg" }
+nym-credential-storage = { version = "1.2.0", path = "common/credential-storage" }
+nym-credential-utils = { version = "1.2.0", path = "common/credential-utils" }
+nym-credentials = { version = "1.2.0", path = "common/credentials" }
+nym-credentials-interface = { version = "1.2.0", path = "common/credentials-interface" }
+nym-crypto = { version = "1.2.0", path = "common/crypto" }
+nym-ecash-contract-common = { version = "1.2.0", path = "common/cosmwasm-smart-contracts/ecash-contract" }
+nym-ecash-signer-check-types = { version = "1.2.0", path = "common/ecash-signer-check-types" }
+nym-ecash-time = { version = "1.2.0", path = "common/ecash-time" }
+nym-exit-policy = { version = "1.2.0", path = "common/exit-policy" }
+nym-gateway-client = { version = "1.2.0", path = "common/client-libs/gateway-client" }
+nym-gateway-requests = { version = "1.2.0", path = "common/gateway-requests" }
+nym-group-contract-common = { version = "1.2.0", path = "common/cosmwasm-smart-contracts/group-contract" }
+nym-http-api-client = { version = "1.2.0", path = "common/http-api-client" }
+nym-http-api-client-macro = { version = "1.2.0", path = "common/http-api-client-macro" }
+nym-http-api-common = { version = "1.2.0", path = "common/http-api-common" }
+nym-id = { version = "1.2.0", path = "common/nym-id" }
+nym-metrics = { version = "1.2.0", path = "common/nym-metrics" }
+nym-mixnet-client = { version = "1.2.0", path = "common/client-libs/mixnet-client" }
+nym-mixnet-contract-common = { version = "1.2.0", path = "common/cosmwasm-smart-contracts/mixnet-contract" }
+nym-multisig-contract-common = { version = "1.2.0", path = "common/cosmwasm-smart-contracts/multisig-contract" }
+nym-network-defaults = { version = "1.2.0", path = "common/network-defaults" }
+nym-noise = { version = "1.2.0", path = "common/nymnoise" }
+nym-noise-keys = { version = "1.2.0", path = "common/nymnoise/keys" }
+nym-nonexhaustive-delayqueue = { version = "1.2.0", path = "common/nonexhaustive-delayqueue" }
+nym-node-requests = { version = "1.2.0", path = "nym-node/nym-node-requests" }
+nym-ordered-buffer = { version = "1.2.0", path = "common/socks5/ordered-buffer" }
+nym-outfox = { version = "1.2.0", path = "nym-outfox" }
+nym-pemstore = { version = "1.2.0", path = "common/pemstore" }
+nym-performance-contract-common = { version = "1.2.0", path = "common/cosmwasm-smart-contracts/nym-performance-contract" }
+nym-serde-helpers = { version = "1.2.0", path = "common/serde-helpers" }
+nym-service-providers-common = { version = "1.2.0", path = "service-providers/common" }
+nym-socks5-client-core = { version = "1.2.0", path = "common/socks5-client-core" }
+nym-socks5-proxy-helpers = { version = "1.2.0", path = "common/socks5/proxy-helpers" }
+nym-socks5-requests = { version = "1.2.0", path = "common/socks5/requests" }
+nym-sphinx = { version = "1.2.0", path = "common/nymsphinx" }
+nym-sphinx-acknowledgements = { version = "1.2.0", path = "common/nymsphinx/acknowledgements" }
+nym-sphinx-addressing = { version = "1.2.0", path = "common/nymsphinx/addressing" }
+nym-sphinx-anonymous-replies = { version = "1.2.0", path = "common/nymsphinx/anonymous-replies" }
+nym-sphinx-chunking = { version = "1.2.0", path = "common/nymsphinx/chunking" }
+nym-sphinx-cover = { version = "1.2.0", path = "common/nymsphinx/cover" }
+nym-sphinx-forwarding = { version = "1.2.0", path = "common/nymsphinx/forwarding" }
+nym-sphinx-framing = { version = "1.2.0", path = "common/nymsphinx/framing" }
+nym-sphinx-params = { version = "1.2.0", path = "common/nymsphinx/params" }
+nym-sphinx-routing = { version = "1.2.0", path = "common/nymsphinx/routing" }
+nym-sphinx-types = { version = "1.2.0", path = "common/nymsphinx/types" }
+nym-statistics-common = { version = "1.2.0", path = "common/statistics" }
+nym-task = { version = "1.2.0", path = "common/task" }
+nym-ticketbooks-merkle = { version = "1.2.0", path = "common/ticketbooks-merkle" }
+nym-topology = { version = "1.2.0", path = "common/topology" }
+nym-upgrade-mode-check = { version = "1.2.0", path = "common/upgrade-mode-check" }
+nym-validator-client = { version = "1.2.0", path = "common/client-libs/validator-client" }
+nym-vesting-contract-common = { version = "1.2.0", path = "common/cosmwasm-smart-contracts/vesting-contract" }
+nym-wireguard-types = { version = "1.2.0", path = "common/wireguard-types" }
+nym-sqlx-pool-guard = { version = "1.2.0", path = "common/sqlx-pool-guard" }
+
 # coconut/DKG related
 # unfortunately until https://github.com/zkcrypto/bls12_381/issues/10 is resolved, we have to rely on the fork
 # as we need to be able to serialize Gt so that we could create the lookup table for baby-step-giant-step algorithm
