--- a/ansible/nym-node/roles/base/tasks/main.yml
+++ b/ansible/nym-node/roles/base/tasks/main.yml
@@ -1,10 +1,8 @@
----
-
 - name: Set hostname
   hostname:
     name: "{{ hostname }}"
 
-- name: Instal aptitude 
+- name: Install aptitude 
   apt:
     name: aptitude
     update_cache: yes
