fix upgrade flow

--- a/ansible/nym-node/playbooks/ansible.cfg
+++ b/ansible/nym-node/playbooks/ansible.cfg
@@ -10,7 +10,7 @@
 [defaults]
 # some basic default values...
 
-inventory       = ./inventory/
+inventory       = inventory/all
 #library        = /usr/share/my_modules/
 remote_tmp     = $HOME/.ansible/tmp
 pattern        = *
@@ -36,7 +36,6 @@ host_key_checking = False
 
 # what flags to pass to sudo
 #sudo_flags = -H
-[WARNING]: provided hosts list is empty, only localhost is available. Note that the implicit localhost does not match 'all'
 
 # SSH timeout
 timeout = 100
