--- a/ansible/nym-node/playbooks/group_vars/all.yml
+++ b/ansible/nym-node/playbooks/group_vars/all.yml
@@ -1,4 +1,6 @@
 ---
+ansible_ssh_private_key_file: ~/.ssh/<SSH_KEY>
+
 # nym_version: "v2025.21-mozzarella"
 # 
 # NOTE:
@@ -14,14 +16,16 @@ operator_name: "<OPERATOR_NAME>"
 
 main_domain: "<DOMAIN>"
 
-email: "<EMAIL>"
-
-website: <WEBSITE>
-
-description: "<NODE_PUBLIC_DESCRIPTION>"
+# NOTE: These values will be used globally unless overwritten per node in inventory/all
 
 ansible_user: root
-ansible_ssh_private_key_file: ~/.ssh/<SSH_KEY>
+email: "<EMAIL>"
+website: "<WEBSITE>""
+description: "<NODE_PUBLIC_DESCRIPTION>"
+moniker: "<MONIKER>"
+description: "<DESCRIPTION>"
+# mode: <MODE>                            # entry-gateway/exit-gateway/mixnode 
+# wireguard_enabled: <WIREGUARD_ENABLED>  # true/false
 
 packages:
   - tmux
