--- a/common/wireguard-private-metadata/tests/Cargo.toml
+++ b/common/wireguard-private-metadata/tests/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nym-wireguard-private-metadata-tests"
-version = "1.0.0"
+version.workspace = true
 authors.workspace = true
 repository.workspace = true
 homepage.workspace = true
@@ -41,4 +41,3 @@ nym-wireguard-private-metadata-shared = { path = "../shared", features = [
     "testing",
 ] }
 nym-wireguard-private-metadata-server = { path = "../server" }
-
