--- a/nym-credential-proxy/vpn-api-lib-wasm/Cargo.toml
+++ b/nym-credential-proxy/vpn-api-lib-wasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nym-vpn-api-lib-wasm"
-version = "0.1.0"
+version.workspace = true
 authors.workspace = true
 repository.workspace = true
 homepage.workspace = true
@@ -35,4 +35,3 @@ nym-credentials-interface = { path = "../../common/credentials-interface" }
 nym-ecash-time = { path = "../../common/ecash-time", features = ["expiration"] }
 nym-credential-proxy-requests = { path = "../nym-credential-proxy-requests", default-features = false, features = ["tsify"] }
 wasm-utils = { path = "../../common/wasm/utils" }
-
