--- a/common/nymsphinx/types/Cargo.toml
+++ b/common/nymsphinx/types/Cargo.toml
@@ -9,7 +9,7 @@ repository = { workspace = true }
 
 [dependencies]
 sphinx-packet = { workspace = true, optional = true }
-nym-outfox = { path = "../../../nym-outfox", optional = true }
+nym-outfox = { workspace = true, optional = true }
 thiserror = { workspace = true }
 
 [features]
