--- a/common/nymsphinx/anonymous-replies/Cargo.toml
+++ b/common/nymsphinx/anonymous-replies/Cargo.toml
@@ -13,12 +13,12 @@ bs58 = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 
-nym-crypto = { path = "../../crypto", features = ["stream_cipher", "rand"] }
-nym-sphinx-addressing = { path = "../addressing" }
-nym-sphinx-params = { path = "../params" }
-nym-sphinx-routing = { path = "../routing" }
-nym-sphinx-types = { path = "../types" }
-nym-topology = { path = "../../topology" }
+nym-crypto = { workspace = true, features = ["stream_cipher", "rand"] }
+nym-sphinx-addressing = { workspace = true }
+nym-sphinx-params = { workspace = true }
+nym-sphinx-routing = { workspace = true }
+nym-sphinx-types = { workspace = true }
+nym-topology = { workspace = true }
 
 [target."cfg(target_arch = \"wasm32\")".dependencies.wasm-bindgen]
 workspace = true
