--- a/common/nymsphinx/params/Cargo.toml
+++ b/common/nymsphinx/params/Cargo.toml
@@ -11,8 +11,8 @@ repository = { workspace = true }
 thiserror = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 
-nym-crypto = { path = "../../crypto", features = ["hashing", "stream_cipher", "aead"] }
-nym-sphinx-types = { path = "../types" }
+nym-crypto = { workspace = true, features = ["hashing", "stream_cipher", "aead"] }
+nym-sphinx-types = { workspace = true }
 
 [features]
 default = ["sphinx"]
