--- a/common/nymsphinx/routing/Cargo.toml
+++ b/common/nymsphinx/routing/Cargo.toml
@@ -10,7 +10,7 @@ repository = { workspace = true }
 [dependencies]
 thiserror = { workspace = true }
 
-nym-sphinx-addressing = { path = "../addressing" }
-nym-sphinx-types = { path = "../types", features = ["sphinx"] }
+nym-sphinx-addressing = { workspace = true }
+nym-sphinx-types = { workspace = true, features = ["sphinx"] }
 
 [features]
