use workspace version

--- a/common/nymsphinx/framing/Cargo.toml
+++ b/common/nymsphinx/framing/Cargo.toml
@@ -13,11 +13,11 @@ tokio-util = { workspace = true, features = ["codec"] }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 
-nym-sphinx-types = { path = "../types", features = ["sphinx", "outfox"] }
-nym-sphinx-params = { path = "../params", features = ["sphinx", "outfox"] }
-nym-sphinx-forwarding = { path = "../forwarding" }
-nym-sphinx-addressing = { path = "../addressing" }
-nym-sphinx-acknowledgements = { path = "../acknowledgements" }
+nym-sphinx-types = { workspace = true, features = ["sphinx", "outfox"] }
+nym-sphinx-params = { workspace = true, features = ["sphinx", "outfox"] }
+nym-sphinx-forwarding = { workspace = true }
+nym-sphinx-addressing = { workspace = true }
+nym-sphinx-acknowledgements = { workspace = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
