--- a/common/crypto/Cargo.toml
+++ b/common/crypto/Cargo.toml
@@ -33,8 +33,8 @@ thiserror = { workspace = true }
 zeroize = { workspace = true, optional = true, features = ["zeroize_derive"] }
 
 # internal
-nym-sphinx-types = { path = "../nymsphinx/types", default-features = false }
-nym-pemstore = { path = "../../common/pemstore" }
+nym-sphinx-types = { workspace = true }
+nym-pemstore = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
