--- a/common/topology/Cargo.toml
+++ b/common/topology/Cargo.toml
@@ -28,10 +28,10 @@ tsify = { workspace = true, features = ["js"], optional = true }
 wasm-bindgen = { workspace = true, optional = true }
 
 ## internal
-nym-crypto = { path = "../crypto" }
-nym-mixnet-contract-common = { path = "../cosmwasm-smart-contracts/mixnet-contract" }
-nym-sphinx-addressing = { path = "../nymsphinx/addressing" }
-nym-sphinx-types = { path = "../nymsphinx/types", features = [
+nym-crypto = { workspace = true }
+nym-mixnet-contract-common = { workspace = true }
+nym-sphinx-addressing = { workspace = true }
+nym-sphinx-types = { workspace = true, features = [
     "sphinx",
     "outfox",
 ] }
@@ -42,7 +42,7 @@ nym-api-requests = { workspace = true }
 
 
 # 'wasm-serde-types' feature
-wasm-utils = { path = "../wasm/utils", default-features = false, optional = true }
+wasm-utils = { workspace = true,  default-features = false, optional = true }
 
 [features]
 default = ["provider-trait"]
