--- a/ansible/nym-node/roles/base/tasks/main.yml
+++ b/ansible/nym-node/roles/base/tasks/main.yml
@@ -1,6 +1,7 @@
 - name: Set hostname
   hostname:
     name: "{{ hostname }}"
+  when: hostname is defined and hostname | length > 0
 
 - name: Install aptitude 
   apt:
