--- a/ansible/nym-node/playbooks/group_vars/all.yml
+++ b/ansible/nym-node/playbooks/group_vars/all.yml
@@ -13,14 +13,13 @@ tunnel_manager_url: "https://github.com/nymtech/nym/raw/refs/heads/develop/scrip
 quic_bridge_deployment_url: "https://raw.githubusercontent.com/nymtech/nym/refs/heads/develop/scripts/nym-node-setup/quic_bridge_deployment.sh"
 
 # NOTE: These values will be used globally unless overwritten per node in inventory/all
-ansible_user: root
-email: "<EMAIL>"
-website: "<WEBSITE>"    # it will be used in the description.toml
+ansible_user: root                       # used for ssh, like `ssh root@nym-exit.ch-1.mynodes.net`
+email: "<EMAIL>"                         # used in certbot, description.toml and landing page
+website: "<WEBSITE>"                     # it is used in the description.toml
 description: "<NODE_PUBLIC_DESCRIPTION>" # or define per node in inventory/all
 
-# NOTE: 
-# Set these vars if you want them globally for all nodes
-# Per node in inventory/all will overwrite these global ones:
+# NOTE: Set these vars if you want them globally for all nodes
+# Per node changes in inventory/all will overwrite these global ones:
 hostname: ""            # this is a fallback, keep it and setup hostname per node in inventory/all
 # moniker: "<MONIKER>"
 # mode: <MODE>                            # entry-gateway/exit-gateway/mixnode 
