--- a/ansible/nym-node/roles/nym/defaults/main.yml
+++ b/ansible/nym-node/roles/nym/defaults/main.yml
@@ -3,10 +3,9 @@
 nym_install_dir: /root/nym-binaries
 
 # nym-node run arguments (defaults, can be overridden per host/group)
-mode: "gateway"                          # maps to --mode
 http_bind_address: "0.0.0.0:8080"        # maps to --http-bind-address
 mixnet_bind_address: "0.0.0.0:1789"      # maps to --mixnet-bind-address
-location: "unknown"                      # maps to --location
+
 
 # WireGuard boolean
 wireguard_enabled: "{{ wireguard_enabled | default(false) | bool }}"
@@ -15,7 +14,7 @@ wireguard_enabled: "{{ wireguard_enabled | default(false) | bool }}"
 landing_page_assets_base_dir: "/var/www"
 
 # Flag toggles
-accept_operator_terms: true              # controls --accept-operator-terms-and-conditions
+# accept_operator_terms: true              # controls --accept-operator-terms-and-conditions
 nym_write_flag: true                     # controls -w
 nym_init_only_flag: true                 # controls --init-only
 wss_port: 9001                           # controlls --announce-wss-port
