--- a/common/nym-kkt/Cargo.toml
+++ b/common/nym-kkt/Cargo.toml
@@ -22,6 +22,7 @@ tokio-util = { workspace = true, features = ["codec"] }
 
 # internal
 nym-crypto = { path = "../crypto", features = ["asymmetric", "serde"]}
+nym-sphinx = { path = "../nymsphinx" }
 
 libcrux-traits = { git = "https://github.com/cryspen/libcrux" }
 libcrux-kem = { git = "https://github.com/cryspen/libcrux" }
@@ -29,6 +30,7 @@ libcrux-psq = { git = "https://github.com/cryspen/libcrux", features = ["test-ut
 libcrux-sha3 = { git = "https://github.com/cryspen/libcrux" }
 libcrux-ml-kem = { git = "https://github.com/cryspen/libcrux" }
 libcrux-ecdh = { git = "https://github.com/cryspen/libcrux", features = ["codec"]}
+libcrux-chacha20poly1305 = { git = "https://github.com/cryspen/libcrux" }
 
 rand = "0.9.2"
 curve25519-dalek = {version = "4.1.3", features = ["rand_core", "serde"] }
