--- a/.github/workflows/nym-api-integration-tests.yml
+++ b/.github/workflows/nym-api-integration-tests.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: ${{ vars.REQUIRED_RUSTC_VERSION }}
           override: true
 
       - name: Install dependencies
