--- a/.github/workflows/ci-contracts-schema.yml
+++ b/.github/workflows/ci-contracts-schema.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install Rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: ${{ vars.REQUIRED_RUSTC_VERSION }}
 
       - name: Generate the schema
         run: make contract-schema
