--- a/.github/workflows/publish-nym-wallet-macos.yml
+++ b/.github/workflows/publish-nym-wallet-macos.yml
@@ -28,10 +28,10 @@ jobs:
         with:
           node-version: 21
           
-      - name: Install Rust stable
+      - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
+          toolchain: ${{ vars.REQUIRED_RUSTC_VERSION }}
           
       - name: Add Rust target for x86_64-apple-darwin
         run: rustup target add x86_64-apple-darwin
