--- a/.github/workflows/ci-nym-wallet-storybook.yml
+++ b/.github/workflows/ci-nym-wallet-storybook.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: arc-linux-dind
+    runs-on: arc-linux-latest-dind
     steps:
       - uses: actions/checkout@v4
 
